--- a/package.json
+++ b/package.json
@@ -1,21 +1,81 @@
 {
-  "name": "oauth2-server",
-  "description": "Complete, framework-agnostic, compliant and well tested module for implementing an OAuth2 Server in node.js",
-  "version": "3.0.0",
-  "keywords": [
-    "oauth",
-    "oauth2"
+  "_args": [
+    [
+      {
+        "raw": "oauth2-server@3.0.0",
+        "scope": null,
+        "escapedName": "oauth2-server",
+        "name": "oauth2-server",
+        "rawSpec": "3.0.0",
+        "spec": "3.0.0",
+        "type": "version"
+      },
+      "/Users/nigo/Documents/GitHub/NodeBB/node_modules/nigo-express-oauth-server"
+    ]
   ],
+  "_from": "oauth2-server@3.0.0",
+  "_id": "oauth2-server@3.0.0",
+  "_inCache": true,
+  "_location": "/oauth2-server",
+  "_nodeVersion": "6.11.1",
+  "_npmOperationalInternal": {
+    "host": "s3://npm-registry-packages",
+    "tmp": "tmp/oauth2-server-3.0.0.tgz_1502293290154_0.025258734356611967"
+  },
+  "_npmUser": {
+    "name": "mjsalinger",
+    "email": "mjsalinger@kinvey.com"
+  },
+  "_npmVersion": "3.10.10",
+  "_phantomChildren": {},
+  "_requested": {
+    "raw": "oauth2-server@3.0.0",
+    "scope": null,
+    "escapedName": "oauth2-server",
+    "name": "oauth2-server",
+    "rawSpec": "3.0.0",
+    "spec": "3.0.0",
+    "type": "version"
+  },
+  "_requiredBy": [
+    "/express-oauth-server"
+  ],
+  "_resolved": "https://registry.npmjs.org/oauth2-server/-/oauth2-server-3.0.0.tgz",
+  "_shasum": "c46276b74c3d28634d59ee981f76b58a6459cc28",
+  "_shrinkwrap": null,
+  "_spec": "oauth2-server@3.0.0",
+  "_where": "/Users/nigo/Documents/GitHub/NodeBB/node_modules/nigo-express-oauth-server",
+  "bugs": {
+    "url": "https://github.com/oauthjs/node-oauth2-server/issues"
+  },
   "contributors": [
-    { "name": "Thom Seddon", "email": "thom@seddonmedia.co.uk" },
-    { "name": "Lars F. Karlström" , "email": "lars@lfk.io" },
-    { "name": "Rui Marinho", "email": "ruipmarinho@gmail.com" },
-    { "name" : "Tiago Ribeiro", "email": "tiago.ribeiro@gmail.com" },
-    { "name": "Michael Salinger", "email": "mjsalinger@gmail.com" },
-    { "name": "Nuno Sousa" },
-    { "name": "Max Truxa" }
+    {
+      "name": "Thom Seddon",
+      "email": "thom@seddonmedia.co.uk"
+    },
+    {
+      "name": "Lars F. Karlström",
+      "email": "lars@lfk.io"
+    },
+    {
+      "name": "Rui Marinho",
+      "email": "ruipmarinho@gmail.com"
+    },
+    {
+      "name": "Tiago Ribeiro",
+      "email": "tiago.ribeiro@gmail.com"
+    },
+    {
+      "name": "Michael Salinger",
+      "email": "mjsalinger@gmail.com"
+    },
+    {
+      "name": "Nuno Sousa"
+    },
+    {
+      "name": "Max Truxa"
+    }
   ],
-  "main": "index.js",
   "dependencies": {
     "basic-auth": "1.1.0",
     "bluebird": "3.5.0",
@@ -24,23 +84,58 @@
     "statuses": "1.3.1",
     "type-is": "1.6.15"
   },
+  "description": "Complete, framework-agnostic, compliant and well tested module for implementing an OAuth2 Server in node.js",
   "devDependencies": {
     "jshint": "2.9.4",
     "mocha": "3.3.0",
     "should": "11.2.1",
     "sinon": "2.3.2"
   },
-  "license": "MIT",
+  "directories": {},
+  "dist": {
+    "shasum": "c46276b74c3d28634d59ee981f76b58a6459cc28",
+    "tarball": "https://registry.npmjs.org/oauth2-server/-/oauth2-server-3.0.0.tgz"
+  },
   "engines": {
     "node": ">=4.0"
   },
+  "gitHead": "e1f741fdad191ee47e7764b80a8403c1ea2804d4",
+  "homepage": "https://github.com/oauthjs/node-oauth2-server#readme",
+  "keywords": [
+    "oauth",
+    "oauth2"
+  ],
+  "license": "MIT",
+  "main": "index.js",
+  "maintainers": [
+    {
+      "name": "mjsalinger",
+      "email": "mjsalinger@kinvey.com"
+    },
+    {
+      "name": "nunofgs",
+      "email": "nunofgs@gmail.com"
+    },
+    {
+      "name": "ruimarinho",
+      "email": "ruipmarinho@gmail.com"
+    },
+    {
+      "name": "thomseddon",
+      "email": "thom@seddonmedia.co.uk"
+    }
+  ],
+  "name": "oauth2-server",
+  "optionalDependencies": {},
+  "readme": "ERROR: No README data found!",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/oauthjs/node-oauth2-server.git"
+  },
   "scripts": {
-    "pretest": "./node_modules/.bin/jshint --config ./.jshintrc lib test",
+    "pretest": "jshint --config ./.jshintrc lib test",
     "test": "NODE_ENV=test ./node_modules/.bin/mocha 'test/**/*_test.js'",
     "test-debug": "NODE_ENV=test ./node_modules/.bin/mocha  --inspect --debug-brk 'test/**/*_test.js'"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/oauthjs/node-oauth2-server.git"
-  }
+  "version": "3.0.0"
 }
